@@ -147,6 +147,5 @@ void LineDialog::help ()
 {
   HelpWindow *hw = new HelpWindow(this, helpFile);
   hw->show();
-  reject();
 }
 
