@@ -358,7 +358,6 @@ void YahooDialog::help ()
 {
   HelpWindow *hw = new HelpWindow(this, helpFile);
   hw->show();
-  reject();
 }
 
 void YahooDialog::allSymbolsChecked (bool d)
